# Nexus-AI

./: .dockerignore  .env.example  .gitignore  .openclaude-profile.json  AGENTS.md  ARCHITECT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOALS.md  LICENSE  LOOP_STATE.md  README.md  ROADMAP.md  SECURITY.md  agent.py  alembic.ini  api_registry.py  db.py  docker-compose.prod.yml  docker-compose.self-hosted.yml  docker-compose.yml  gist_backup.py  gunicorn.conf.py  main.py  memory.py  nexus_loop_prompt.md  nixpacks.toml  package.json  personas.py  pytest.ini  railway.toml  requirements.rag.txt  requirements.txt  run_nexus_loop.sh  sitecustomize.py  start.sh  thinking.py  tools_builtin.py
.claude/: .fuse_hidden000004070000000c
.githooks/: pre-commit
.github/: copilot-instructions.md  pull_request_template.md
.openclaw/: workspace-state.json
desktop/: README.md
docs/: AI hierarchy structure explained.md  APEX_MODEL_FAMILY_EXECUTION_PLAN.md  ARCHITECTURE.md  AUDIT_COMPLETE_RESULTS_2026_04_17.md  AUDIT_COMPLETION_MARKER_2026_04_17.txt  AUDIT_CORRECTED_INVENTORY_SUMMARY.md  AUDIT_FINDINGS_2026_04_17.md  AUDIT_INDEX_AND_QUICK_REFERENCE.md  AUDIT_SUMMARY_FOR_STAKEHOLDERS.md  Agentic-AI- terminology-clarification-document.md  COMPETITOR_L0_L1_SEED_CATALOG_2026Q2.md  COMPLETE_NAVIGATION.md  CONTINUED_DEVELOPMENT_SUMMARY.md  CORRECTIONS_GUIDE.md  DEVELOPMENT_SUMMARY.md  DEV_WORK_COMPLETED.md  DPO_FIRST_RUN_REPORT.md  EXECUTION_SUMMARY.md  EXTERNAL_BORROW_MATRIX.md  FEATURE_IMPLEMENTATION_SUMMARY.md  FEATURE_INVENTIORY_ANALYSIS_-_INCOMPLETE_FEATURES_AND_HARDENING_OPPERTUNITIES.md  FEATURE_INVENTORY.md  FEATURE_INVENTORY_CORRECTIONS_SCRIPT.py  FINAL_SESSION_SUMMARY.md  FINAL_STATUS.md  FUTURE_ENHANCEMENTS.md  HARDENING_EXECUTION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MOBILE_ENHANCEMENT_PLAN.md  OWN_MODEL_KICKSTART.md  PRODUCTION_DEPLOYMENT_ROADMAP.md  PROJECT_REFACTOR_PLAN.md  RELEASE_SIGNING.md  RLHF_DPO_DELIVERY_SUMMARY.md  RLHF_DPO_GUIDE.md  RLHF_DPO_IMPLEMENTATION_SUMMARY.md  RLHF_DPO_INDEX.md  RLHF_DPO_INTEGRATION_CHECKLIST.md  RLHF_DPO_PROJECT_COMPLETE.md  RLHF_DPO_QUICK_REFERENCE.md  (+22 more)
examples/: feedback_sample.jsonl  rlhf_dpo_workflows.py
nostack/: setup  (+5 more)
sdk/python/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
sdk/python/nexus_ai_sdk/: __init__.py  _version.py  async_client.py  client.py  compat.py  operator.py
(+533 files in other folders)
